--- a/sample.env
+++ b/sample.env
@@ -1,8 +1,8 @@
-APP_ID=
-API_HASH=
-BOT_TOKEN=
-DB_NAME=
-LOG_CHANNEL_ID=
-MONGO_DB_URI=
-OWNER_NAME=
-OWNER_ID=
+APP_ID=26477680
+API_HASH=b0d8504752cc1ecf52009ece2bdef0b8
+BOT_TOKEN=6726190227:AAE_6tUiU3MnMchzVXKWkeNKkG9LpJGJA7c
+DB_NAME=dangreatganteng
+LOG_CHANNEL_ID=-1002075430848
+MONGO_DB_URI=mongodb+srv://dan2:12345@cluster0.i1f6zo2.mongodb.net/?retryWrites=true&w=majority
+OWNER_NAME=mhmdwldnnnn 
+OWNER_ID=5779185981
